# ChangeLog for net-wireless/ndiswrapper
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-wireless/ndiswrapper/ChangeLog,v 1.60 2006/11/04 23:54:07 betelgeuse Exp $

*ndiswrapper-1.28 (04 Nov 2006)

  04 Nov 2006; Petteri Räty <betelgeuse@gentoo.org>
  +ndiswrapper-1.28.ebuild:
  Version bump.

  04 Nov 2006; Petteri Räty <betelgeuse@gentoo.org>
  -ndiswrapper-1.15.ebuild, -ndiswrapper-1.16.ebuild,
  -ndiswrapper-1.17.ebuild, -ndiswrapper-1.21.ebuild,
  -ndiswrapper-1.23.ebuild:
  Removed old versions.

  04 Nov 2006; Christian Faulhammer <opfer@gentoo.org>
  ndiswrapper-1.25.ebuild:
  stabled x86, bug #152154

*ndiswrapper-1.26 (20 Oct 2006)

  20 Oct 2006; Petteri Räty <betelgeuse@gentoo.org>
  +ndiswrapper-1.26.ebuild:
  Version bump. Upstream notes: Removed debug flag in ndiswrapper script. When
  HIGHMEM is enabled, allocate and copy URB buffers only if necessary. This
  prevents memory allocation failures.

*ndiswrapper-1.25 (14 Oct 2006)

  14 Oct 2006; Petteri Räty <betelgeuse@gentoo.org>
  +ndiswrapper-1.25.ebuild:
  Version bump. Fixes bug #151256. This version adds support for wireless
  extensions version 21.

*ndiswrapper-1.23 (03 Sep 2006)

  03 Sep 2006; Petteri Räty <betelgeuse@gentoo.org>
  +ndiswrapper-1.23.ebuild:
  Version bump.

*ndiswrapper-1.21 (22 Jul 2006)

  22 Jul 2006; Petteri Räty <betelgeuse@gentoo.org>
  +ndiswrapper-1.21.ebuild:
  Version bump. Fixes bug #140646.

  15 Jul 2006; Bryan Østergaard <kloeri@gentoo.org> metadata.xml:
  Remove brad from metadata.xml as he's retired.

*ndiswrapper-1.17 (22 Jun 2006)

  22 Jun 2006; Petteri Räty <betelgeuse@gentoo.org>
  +ndiswrapper-1.17.ebuild:
  Version bump wrt bug #136049. Also resolves bug #117546.

  13 Jun 2006; Roy Marples <uberlord@gentoo.org> ndiswrapper-1.2-r1.ebuild,
  ndiswrapper-1.15.ebuild, ndiswrapper-1.16.ebuild:
  Change update-modules to modules-update

*ndiswrapper-1.16 (28 May 2006)
