@@ -1,0 +1,3 @@
+MD5 25264b9c71f68ddea24ab54b41ee7e60 ndiswrapper-1.29.tar.gz 188870
+RMD160 fff3f0c82010796ef5fe614d526b55d63943bb06 ndiswrapper-1.29.tar.gz 188870
+SHA256 a4fc5a5ca668286cd3e1438197a05ab70d2e873d10e7e540cc4314fda36b39d4 ndiswrapper-1.29.tar.gz 188870
